@@ -3,7 +3,11 @@ package Substit is
   Std_In_Out : constant String := "-";
 
   -- Process one file (stdin -> stdout if File_Name is Std_In_Out)
-  procedure Do_One_File (File_Name : in String; Backup : in Boolean);
+  -- Make a backup file, display substitutions on option
+  -- Return the number of substitutions
+  function Do_One_File (File_Name : String;
+                        Backup    : Boolean;
+                        Verbose   : Boolean) return Natural;
   -- Error handled and traced by Do_One
   Substit_Error : exception;
 
